--- a/DockerFile
+++ b/DockerFile
@@ -8,7 +8,13 @@ USER root
 COPY package*.json ./
 
 # Install app dependencies
-RUN npm install
+
+RUN npm install --save-dev ajv@^7
+
+RUN npm install --force  --legacy-peer-deps
+
+
+
 
 # Copy the dependencies into a minimal Node.js image
 FROM registry.access.redhat.com/ubi8/nodejs-18-minimal:latest AS final
