--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,11 @@ jobs:
 
     - name: Login to OpenShift
       run: |
-        oc login --token=sha256~scLDlryqjNTj-C2UQGlqR6ea9aURkKF1K1XOALah2V8  --server=https://api.rm3.7wse.p1.openshiftapps.com:6443 --insecure-skip-tls-verify
+        oc login --token=sha256~hryi08pn6COjVK5aFJXA4yBj0l1EJzG9P3wTiG06nK8  --server=https://api.rm2.thpm.p1.openshiftapps.com:6443 --insecure-skip-tls-verify
 
     - name: Set OpenShift Project
       run: |
-        oc project t4nm4y-dev
+        oc project market-shifters-dev
 
     - name: Install Node.js Dependencies
       run: |
